--- a/src/main/webapp/soundboard.css
+++ b/src/main/webapp/soundboard.css
@@ -1,11 +1,9 @@
 body {
+    #height: 316px;
     color: rgba(255,255,255,0.75);
-    /*
-    height: 316px;
-    background: url("ole.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    */
+    #background: url("ole.jpg");
+    #background-size: cover;
+    #background-attachment: fixed;
 }
 .bg-darker {
     background-color:rgba(25,25,25,1.0);
